<resources>
    <string name="app_name">CleanCity</string>
    <string name="login_button">LOGIN</string>
    <string name="register_button">REGISTER</string>
    <string name="title_activity_login__page">Sign in</string>

    <!-- Strings related to first screen -->
    <string name="first_screen">Login or Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to register -->
    <string name="ask_first_name">What is your first name?</string>
    <string name="ask_last_name">What is your last name?</string>
    <string name="ask_email">What is your email address?</string>
    <string name="ask_username">Enter a username.</string>
    <string name="ask_password">Enter a password.</string>
    <string name="confirm_password">Confirm your password.</string>
    <string name="submit_button">Submit</string>
    <string name="title_activity_register__page_">"Register "</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main_map">Map</string>

    <!--- Strings related to Map Activity and Permission Utils -->
    <string name="title_activity_1">Activity1</string>
    <string name="activity1_edit_statement"></string>
    <string name="activity1_button_message">Enter</string>
    <string name="Activity2_displayText">Hello</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="title_activity_main">MainActivity</string>
</resources>


